--- a/public/react-site/package.json
+++ b/public/react-site/package.json
@@ -9,9 +9,11 @@
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "react-router": "next",
     "react-router-dom": "next",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
     "superagent": "^3.4.4"
   },
   "scripts": {
