--- a/client-web/package.json
+++ b/client-web/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "next",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "superagent": "^3.4.4"
   },
   "scripts": {
