--- a/client-web/package.json
+++ b/client-web/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "hellojs": "^1.14.0",
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
