--- a/client-web/package.json
+++ b/client-web/package.json
@@ -11,6 +11,7 @@
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-google-charts": "^1.5.3",
     "react-redux": "^5.0.3",
     "react-router": "next",
     "react-router-dom": "next",
