--- a/client-web/package.json
+++ b/client-web/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "next",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-axios-middleware": "^3.1.2",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.4.4"
   },
