--- a/client-web/package.json
+++ b/client-web/package.json
@@ -18,6 +18,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-axios-middleware": "^3.1.2",
+    "redux-localstorage-simple": "^1.2.0",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.4.4"
   },
