--- a/client-web/package.json
+++ b/client-web/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "font-awesome": "^4.7.0",
     "hellojs": "^1.14.0",
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
