--- a/package.json
+++ b/package.json
@@ -4,7 +4,32 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "redux-thunk": "^2.2.0"
+    "axios": "^0.15.3",
+    "font-awesome": "^4.7.0",
+    "hellojs": "^1.14.0",
+    "material-ui": "^0.17.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-google-charts": "^1.5.3",
+    "react-redux": "^5.0.3",
+    "react-router": "next",
+    "react-router-dom": "next",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-axios-middleware": "^3.1.2",
+    "redux-localstorage-simple": "^1.2.0",
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.4.4",
+    "body-parser": "^1.16.1",
+    "cors": "^2.8.1",
+    "dotenv": "^1.2.0",
+    "express": "^4.12.4",
+    "express-session": "^1.11.3",
+    "jsonwebtoken": "^7.3.0",
+    "mongoose": "^4.1.0",
+    "passport": "^0.3.0",
+    "passport-github": "^1.0.0",
+    "request": "^2.80.0"
   },
   "devDependencies": {},
   "scripts": {
