--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd server && node server.js"
+    "start": "cd server && npm start"
   },
   "engines": {
     "npm": "4.1.2",
