--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "boilerplate"
   ],
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "Blake Johnston",
   "license": "MIT",
