--- a/package.json
+++ b/package.json
@@ -33,12 +33,10 @@
     "superagent": "^3.4.4",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {
-    "react-scripts": "0.9.5"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently 'cd server && npm start' 'cd client-web && yarn build'"
+    "start": "concurrently -k 'cd server && npm start' 'cd client-web && yarn build'"
   },
   "engines": {
     "npm": "4.1.2",
