--- a/client-web/package.json
+++ b/client-web/package.json
@@ -14,8 +14,8 @@
     "react-dom": "^15.4.2",
     "react-google-charts": "^1.5.3",
     "react-redux": "^5.0.3",
-    "react-router": "next",
-    "react-router-dom": "next",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-axios-middleware": "^3.1.2",
